@@ -167,26 +167,29 @@ STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "General"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    GROUPBOX        "User settings",IDC_STATIC_GRPUSERSETTINGS,7,7,246,98
+    GROUPBOX        "User settings",IDC_STATIC_GRPUSERSETTINGS,7,7,246,79
     LTEXT           "Nickname",IDC_STATIC_NICKNAME,15,22,49,8
     EDITTEXT        IDC_EDIT_NICKNAME,67,19,76,14,ES_AUTOHSCROLL
     LTEXT           "Gender",IDC_STATIC_GENDER,15,38,49,8
     CONTROL         "Male",IDC_RADIO_MALE,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,75,37,31,10
     CONTROL         "Female",IDC_RADIO_FEMALE,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,127,37,39,10
-    LTEXT           "BearWare.dk Web Login",IDC_STATIC_BEARWARELOGIN,15,54,80,8
-    EDITTEXT        IDC_EDIT_BEARWAREID,97,51,97,14,ES_AUTOHSCROLL | ES_READONLY
-    PUSHBUTTON      "&Activate",IDC_BUTTON_SETUPBEARWARE,199,51,50,14
-    LTEXT           "Set away status after ",IDC_STATIC_SETAWAY,15,70,93,8
-    EDITTEXT        IDC_EDIT_INACTIVITY,112,67,19,14,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "sec. of inactivity (0=disabled)",IDC_STATIC_SECINACT,134,70,114,8
+    LTEXT           "Set away status after ",IDC_STATIC_SETAWAY,15,54,93,8
+    EDITTEXT        IDC_EDIT_INACTIVITY,112,51,19,14,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "sec. of inactivity (0=disabled)",IDC_STATIC_SECINACT,134,54,114,8
     CONTROL         "Disable voice activation while inactive",IDC_CHECK_IDLEVOX,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,86,232,10
-    GROUPBOX        "Speech transmission mode",IDC_STATIC_GRPSPEECH,7,109,246,76
-    CONTROL         "Push to talk",IDC_CHECK_PUSHTOTALK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,127,78,10
-    PUSHBUTTON      "&Setup keys",IDC_BUTTON_SETUPKEYS,99,125,59,13
-    LTEXT           "Key combination",IDC_STATIC_KEYCOMP,15,146,80,8
-    EDITTEXT        IDC_EDIT_KEYCOMB,99,143,87,14,ES_AUTOHSCROLL | ES_READONLY
-    CONTROL         "Voice activated",IDC_CHECK_VOICEACT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,163,96,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,70,232,10
+    GROUPBOX        "BearWare.dk Web Login",IDC_STATIC_WEBLOGIN,7,90,246,50
+    LTEXT           "BearWare.dk Web Login ID",IDC_STATIC_BEARWARELOGIN,15,106,99,8
+    EDITTEXT        IDC_EDIT_BEARWAREID,118,103,77,14,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "&Activate",IDC_BUTTON_SETUPBEARWARE,198,103,50,14
+    CONTROL         "Restore volume levels and subscriptions on login for Web Login users",IDC_CHECK_WEBLOGIN,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,122,233,10
+    GROUPBOX        "Speech transmission mode",IDC_STATIC_GRPSPEECH,7,144,246,76
+    CONTROL         "Push to talk",IDC_CHECK_PUSHTOTALK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,162,78,10
+    PUSHBUTTON      "&Setup keys",IDC_BUTTON_SETUPKEYS,99,160,59,13
+    LTEXT           "Key combination",IDC_STATIC_KEYCOMP,15,181,80,8
+    EDITTEXT        IDC_EDIT_KEYCOMB,99,178,87,14,ES_AUTOHSCROLL | ES_READONLY
+    CONTROL         "Voice activated",IDC_CHECK_VOICEACT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,198,96,10
 END
 
 IDD_PROPPAGE_ADVANCEDPAGE DIALOGEX 0, 0, 260, 240
@@ -497,7 +500,7 @@ BEGIN
     LTEXT           "Static",IDC_STATIC_APPTITLE,7,7,143,47
     DEFPUSHBUTTON   "OK",IDOK,154,7,36,16
     LTEXT           "Static",IDC_STATIC_VERSION,105,34,92,14
-    CONTROL         "",IDC_RICHEDIT2_CREDITS,"RichEdit20W",ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | ES_WANTRETURN | WS_BORDER | WS_VSCROLL | WS_TABSTOP,7,66,190,124
+    CONTROL         "",IDC_RICHEDIT2_CREDITS,"RichEdit20W",WS_BORDER | WS_VSCROLL | WS_TABSTOP | 0x1844,7,66,190,124
     LTEXT           "Compiled on ",IDC_STATIC_COMPILED,7,193,189,25
     LTEXT           "Copyright (c) 2005-2020, BearWare.dk",IDC_STATIC_COPYRIGHT,7,222,183,8
     ICON            IDR_MAINFRAME,IDC_STATIC_IMAGE,176,201,21,20
@@ -2052,6 +2055,7 @@ END
 STRINGTABLE
 BEGIN
     IDS_SUBINT_VIDEO        "%s changed subscription ""Intercept Video"" to: %d"
+    IDS_TIMELOCALE          "%Y-%m-%d %H:%M:%S"
     IDS_SUBINT_DESKTOP      "%s changed subscription ""Intercept Desktop"" to: %d"
 END
 
@@ -2319,7 +2323,6 @@ BEGIN
     IDS_SUREDELETECHAN      "Are you sure you want to delete channel %s"
     IDS_CHANDELETETITLE     "Delete Channel"
     IDS_CHANPSW             "Channel password"
-    IDS_TIMELOCALE             "%Y-%m-%d %H:%M:%S"
     IDS_FILEADDBY           "File %s added by %s"
     IDS_COMPILEDON          "Compiled on "
     IDS_UNICODEENABLED      "Unicode -> UTF-8 conversion enabled.\r\n"
