@@ -749,6 +749,8 @@
     <item id="1594">Start p&amp;osition</item>
     <item id="1595">Audio preprocessor</item>
     <item id="1596">Test playback</item>
+	<item id="1598">Restore volume levels and subscriptions on login for Web Login users</item>
+	<item id="1599">BearWare.dk Web Login ID</item>
     <item id="32791">What is my &amp;IP-address?</item>
     <item id="32798">&amp;Op\tCtrl+O</item>
     <item id="32801">Vie&amp;w Channel Messages\tF10</item>
